Changes
=======

0.4.3 ()
------------------
- make dataset name arguments case insensitive
- default max_workers to 2 in functions outside of CLI

0.4.2 (2020-08-26)
------------------
- bc2pg - fix bug that populated incorrect primary key values for multi-page requests (#78)
- bc2pg - for large requests, default max_workers to 2 rather than 5 (#75)

0.4.1 (2020-02-28)
------------------
- fix bc2pg connection string (#74)

0.4.0 (2020-02-27)
------------------
- WxS requests made via https (#59)
- add options --verbose / --quiet to CLI (#62)
- add option --interpolation to dem command (#63)
- add option as_gdf to get_data function to load directly to a geopandas
  dataframe (#67)
- fix bc2pg to actually use port specified in --db_url (#69)
- regenerate data list cache daily (#70)
- fix bc2pg to only use a password when provided in --db_url (#72)

0.3.5 (2019-10-08)
------------------
- use http WFS requests to avoid certificate errors (#59)
- fix bug introduced in v0.3.4 (#60)

0.3.4 (2019-09-30)
------------------
- support using --bounds and --filter at the same time (#58)
- support --bounds_crs option for most tools/functions
- rename --src_crs option for dem command to --bounds_crs

0.3.3 (2019-05-16)
------------------
- use OBJECTID as default sortby key (#57)
- bc2pg - add dim option to support loading data with Z dimensions
- bc2pg - add fid option to enable correct assignment of primary key
- bc2pg - remove sortby option
- fix get_dem to use CRS parameters correctly (#53)
- bug fixes

0.3.2 (2019-03-22)
------------------
- add append option to bc2pg
- fix bcdata cat not requesting specified CRS (#48)
- fix crash when DATABASE_URL not set (#49)
- handle WCS request errors

0.3.1 (2019-01-28)
------------------
- fix #45
- add progress bar
- enable bc2pg pagesize

0.3.0 (2019-01-04)
------------------
Major revision, nothing is backwards compatible
- download data via WFS rather than DWDS
- functions renamed
- data downloaded to file is to geojson only